# CSC14120-ParallelProgramming

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  config.h.in  debai.txt  svm_libsvm_classifier.ipynb
include/: autoencoder.h
include/common/: gpu_info.h
include/gpu/: gpu_autoencoder_v2.h  gpu_layers_v2.cuh  gpu_trainer_v2.h
include/gpu1/: gpu1_autoencoder.h  gpu1_layers.cuh  gpu1_trainer.h
scripts/: run_extract_features.sh
src/: autoencoder.cpp  cifar10_dataset.cpp  feature_extractor.cpp  layers.cpp  main.cu  trainer.cpp
src/common/: gpu_info.cu
src/cpu/: autoencoder.cpp
src/gpu/: gpu_autoencoder.cu  gpu_autoencoder_v2.cu  gpu_layers_v2.cu  gpu_trainer_v2.cu
src/gpu1/: gpu1_autoencoder.cu  gpu1_layers.cu  gpu1_trainer.cu
src/gpu2/: gpu2_trainer.cu
